--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone: Asia/Seoul
 
 title: DE Log # the main title
 
-tagline: 데이터 엔지니어링 오류 해결 기록 블로그 # it will display as the subtitle
+tagline: 데이터 엔지니어링 디버깅 기록 블로그 # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
   데이터 엔지니어링 디버깅 기록 블로그
@@ -26,7 +26,7 @@ description: >- # used by seo meta and the atom feed
 url: "https://clsclffk.github.io"
 
 github:
-  username: github_username # change to your GitHub username
+  username: clsclffk # change to your GitHub username
 
 twitter:
   username: twitter_username # change to your Twitter username
