--- a/_config.yml
+++ b/_config.yml
@@ -29,8 +29,8 @@ url: "https://clsclffk.github.io"
 github:
   username: clsclffk # change to your GitHub username
 
-twitter:
-  username: twitter_username # change to your Twitter username
+# twitter:
+#   username: twitter_username # change to your Twitter username
 
 social:
   # Change to your full name.
